# game-design-database

./: .gitignore  AGENTS.md  README.md  WORKFLOW.md  pyproject.toml
10_来源/: Deconstructor of Fun.md  Game Design Skills.md  Mobalytics.md  Spire Codex.md  awesome-game-design.md
20_入口页/: Deconstructor of Fun - Deconstructions.md  awesome-game-design - README.md
30_网页卡/: 4 x Reasons Why Squad Busters Suffers While Brawl Stars Soars.md  Condor's Diablo 1 - Pitch.md  Daily Missions in Puzzles - Why should we see them more often -.md  Designing The Core Gameplay Loop - A Beginner’s Guide.md  Duolingo - How the $15B App uses Gaming Principles to Supercharge DAU Growth.md  Finding Genre Success - the Case of Gossip Harbor.md  Grim Fandango - Puzzle Document.md  Hay Day With a To-Do List - How Focus Friend Cracked Productivity Retention.md  How Drama and Fake Ads Convert To Real Profits.md  Pixel Flow - The Publisher's Dream.md  Postmortem - Ion Storm's Deus Ex.md  Postmortem - Irrational Games' System Shock 2.md  Prince of Persia 2 - Design Bible.md  Sort Puzzles - How a New Subgenre is Born.md  Squad Busters 2.0 and Supercell's YOLO Strategy.md  Squad Busters One Month Later - Down, But Not Out.md  Telegram x Web3 Gaming - Why So Popular and How Can I Get In On This -.md  The Balatro Timeline.md  The Magic Behind Magicabin’s ARPDAU.md  The Post-Block Blast Playbook.md  The Screw Puzzle Gold Rush.md  The Sweet Art of Feature Adaptation.md  Time Blast - Will it revive the Rest of the Genre -.md  What Happened to Coin Master After Monopoly Go! and What Happens Next.md  (+3 more)
(+84 files in other folders)
