[project]
name = "game-design-patterns"
version = "0.1.0"
description = "面向 Agent 的游戏设计模式 Obsidian 仓库"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13.4",
]

[project.scripts]
import-url = "game_design_patterns.importer:main"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
